feat: add swagger for all endpoints and fix build
